# nlp_interpreter

./: README.md  llm_classifier.py  llm_processor.py  llm_switcher.py  main.py  server.py  setup.py
nlp_interpreter/: LICENSE  README.md  llm_classifier.py  llm_processor.py  llm_switcher.py  pyproject.toml  schema_validator.py  setup.py
nlp_interpreter/nlp_interpreter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nlp_interpreter/src/nlp_interpreter/: __init__.py  llm_processor.py
nlp_interpreter/src/nlp_interpreter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
